cabal-version:      3.0
name:               app
version:            0.1.0.0
synopsis:           A miso-sampler application
description:        Getting started miso application
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          haskell-miso @ 2025
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag interactive
  default:
    False
  manual:
    True

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM
    if flag (interactive)
      cpp-options:
        -DINTERACTIVE

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

executable app
  import:
    options, warnings
  main-is:
    Main.hs
  build-depends: 
    base < 5, containers >= 0.7, miso >= 1.9
  hs-source-dirs:
    app
  default-language:
    Haskell2010
